--- a/index.html
+++ b/index.html
@@ -5,9 +5,11 @@
 		<meta http-equiv="content-type" content="text/html;charset=utf-8"/>
 		<meta name="Robots" content="index,follow"/>
 		<meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, minimum-scale=1" />
+		<meta http-equiv="Content-Security-Policy" content="style-src 'self' https://fonts.googleapis.com; font-src 'self' https://fonts.gstatic.com">
         <link rel="apple-touch-icon" sizes="180x180" href="./apple-touch-icon.png">
         <link rel="icon" type="image/png" sizes="32x32" href="./favicon-32x32.png">
         <link rel="icon" type="image/png" sizes="16x16" href="./favicon-16x16.png">
+        <link rel="manifest" href="./site.webmanifest">
 		<link href="https://fonts.googleapis.com/css?family=Lato|Open+Sans&display=swap" rel="stylesheet" />
 		<link rel="stylesheet" type="text/css" href="./styles.css"/>
 
@@ -40,6 +42,12 @@
 					<p>
 						I am an Assistant Professor of the <a href="https://www.ntu.edu.sg/spms/about-us/mathematics" target="_blank">Division of Mathematical Sciences</a> in the <a href="https://www.ntu.edu.sg/spms" target="_blank">School of Physical and Mathematical Sciences</a> at <a href="http://www.ntu.edu.sg/" target="_blank">Nanyang Technological University - NTU Singapore</a>.
 					</p>
+					
+					<div id="jobOpening">
+						<b> Job Opening</b>
+						<br>
+						I am <a href="https://ntu.wd3.myworkdayjobs.com/en-US/Careers/job/NTU-Main-Campus-Singapore/Research-Fellow--Algebra-and-Combinatorics-_R00016691-1">hiring a postdoctoral fellow</a>.  If you are interested to work with me, please get in touch.
+					</div>
 
 					</div>
 				</div>
@@ -106,7 +114,7 @@
 							</p>
 							<p><a href="https://www.math.colostate.edu/~king/codex/" target="_blank">CodEx Seminar</a> 13/04/2021: Real equiangular lines in low dimensions. 
 								<center><iframe width="350" height="215" style="border-style: none;"
-									src="https://www.youtube.com/embed/ZdoNVdMTJA8?t=20s"
+									src="https://www.youtube.com/embed/ZdoNVdMTJA8?t=20s" iframe-src="https://www.youtube.com/embed/"
 									allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen>
 								</iframe></center>
 							</p>
@@ -138,7 +146,15 @@
 			<script type="text/javascript" src="jquery.sticky.js"></script>
 			<script type="text/javascript">
 			var papers =
-			[  ["Constructions of $t$-designs from weighing matrices and walk-regular graphs",
+			[  ["Bootstrapping cascaded random matrix models: correlations in permutations of matrix products",
+				"Byrnes and Foreman",
+				"Random matrix theory is a useful tool in the study of the physics of multiple scattering systems, often striking a balance between computation speed and physical rigour. Propagation of waves through thick disordered media, as arises in for example optical scattering or electron transport, typically necessitates cascading of multiple random matrices drawn from an underlying ensemble for thin media, greatly increasing computational burden. Here we propose a dual pool based bootstrapping approach to speed up statistical studies of scattering in thick random media. We examine how potential matrix reuse in a pool based approach can impact statistical estimates of population averages. Specifically, we discuss how both bias and additional variance in the sample mean estimator are introduced through bootstrapping. In the diffusive scattering regime, the extra estimator variance is shown to originate from samples in which cascaded transfer matrices are permuted matrix products. Through analysis of the combinatorics and cycle structure of permutations we quantify the resulting correlations. Proofs of several analytic formulae enumerating the frequency with which correlations of different strengths occur are derived. Extension to the ballistic regime is briefly considered.",
+				"https://arxiv.org/abs/2405.02541",
+				null,
+				[],
+				,null,
+			null],
+				["Constructions of $t$-designs from weighing matrices and walk-regular graphs",
 				"Suda",
 				"We provide a method to construct t-designs from weighing matrices and walk-regular graphs. One instance of our method can produce a 3-design from any (symmetric or skew-symmetric) conference matrix, thereby providing a partial answer to a question of Gunderson and Semeraro JCTB 2017. We explore variations of our method on some matrices that satisfy certain combinatorial restrictions. In particular, we show that there exist various infinite families of partially balanced incomplete block designs with block size four on the binary Hamming schemes and the 3-class association schemes attached to symmetric designs, and regular pairwise balanced designs with block sizes three and four.",
 				"https://arxiv.org/abs/2402.17528",
@@ -1361,7 +1377,25 @@
 			var lmyear = lm.getFullYear();
 			$("#update").text("Last updated: "+lmday + ' ' + monthNames[lmmonthIndex] + ' ' + lmyear );
 			</script>
+		  <script>
+		    (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+		    (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+		    m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+		    })(window,document,'script','https://www.google-analytics.com/analytics.js','ga');
 
+		    ga('create', 'UA-44079665-2', 'auto');
+		    ga('send', 'pageview');
+
+		  </script>
+		  <!-- Global site tag (gtag.js) - Google Analytics -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-Y8QF7CWDRY"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-Y8QF7CWDRY');
+</script>
 			<script type="text/x-mathjax-config">
 			MathJax.Hub.Config({
 			  tex2jax: {inlineMath: [['$','$'], ['\\(','\\)']]}
