--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 	<head>
 		<meta http-equiv="X-UA-Compatible" content="IE=EDGE">
 		<meta http-equiv="content-type" content="text/html;charset=utf-8">
-		<meta name="Robots" content="index,follow"/>
+		<meta name="Robots" content="index,follow">
 		<meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, minimum-scale=1">
         <link rel="apple-touch-icon" sizes="180x180" href="./apple-touch-icon.png">
         <link rel="icon" type="image/png" sizes="32x32" href="./favicon-32x32.png">
@@ -24,7 +24,7 @@
 						<div id="contact">
 							<ul>
 								<li id="email">gary [&#97;&#116;] ntu.edu.sg</li>
-								<li id="office">SPMS-MAS-05-03 <br />
+								<li id="office">SPMS-MAS-05-03 <br>
 								 Nanyang Technological University, 21 Nanyang Link, Singapore 637371</li>
 							</ul>
 							<div id="alt">
@@ -99,31 +99,31 @@
                                 <a href="https://umanitoba.zoom.us/rec/share/3xVFAneJV2s-K-t13tZ7mVfPrKq1iAW9ytRfdEF3gQ4rN13aaZRe_sh4FT984fbM.zTlIWFaV8YcAmeWF?startTime=1680879845000" target="_blank">Link to recording</a> (passcode: 1efy5A#0)
                             </p> -->
 							<p><a href="https://www.math.colostate.edu/~king/codex/" target="_blank">CodEx Seminar</a> 06/07/2022: Hermitian matrices of roots of unity and their characteristic polynomials.
-								<center><iframe width="350" height="215" style="border-style: none;"
+								<iframe width="350" height="215" style="align:center; border-style: none;"
 									src="https://www.youtube.com/embed/BQcNlZS9uiQ?t=20s"
 									allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen>
-								</iframe></center>
+								</iframe>
 							</p>
 							<p> <a href="https://homepages.dcc.ufmg.br/~gabriel/AGT/" target="_blank">AGT Seminar</a> 13/06/2022: Maximal cliques in strongly regular graphs. 
 													
-								<center><iframe width="350" height="215" style="border-style: none;"
+								<iframe width="350" height="215" style="align:center; border-style: none;"
 												src="https://www.youtube.com/embed/EFswMDmbXRo?t=12s"
 												allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen>
-								</iframe></center>
+								</iframe>
 							</p>
 							<p><a href="https://www.math.colostate.edu/~king/codex/" target="_blank">CodEx Seminar</a> 13/04/2021: Real equiangular lines in low dimensions. 
-								<center><iframe width="350" height="215" style="border-style: none;"
+								<iframe width="350" height="215" style="align:center; border-style: none;"
 									src="https://www.youtube.com/embed/ZdoNVdMTJA8?t=20s" iframe-src="https://www.youtube.com/embed/"
 									allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen>
-								</iframe></center>
+								</iframe>
 							</p>
 							<h3>Mini-courses</h3>
 							<p> <a href="http://www.crm.umontreal.ca/2022/Graph22/index_e.php" target="_blank">Graph Theory, Algebraic Combinatorics and Mathematical Physics</a> August 2022: Equiangular lines.
 	
-								<center><iframe width="350" height="215" style="border-style: none;"
+								<iframe width="350" height="215" style="align:center; border-style: none;"
 												src="https://www.youtube.com/embed/videoseries?list=PLKNR1L7yi-N_IOp0Xm1_qnTJsyeU1wUkF"
 												allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen>
-								</iframe></center>
+								</iframe>
 							</p>
 							<p>
 								Check out the <a href="talks/Montreal_lectures.pdf" target="_blank">Lecture Notes</a>. 
