--- a/index.html
+++ b/index.html
@@ -99,31 +99,31 @@
                                 <a href="https://umanitoba.zoom.us/rec/share/3xVFAneJV2s-K-t13tZ7mVfPrKq1iAW9ytRfdEF3gQ4rN13aaZRe_sh4FT984fbM.zTlIWFaV8YcAmeWF?startTime=1680879845000" target="_blank">Link to recording</a> (passcode: 1efy5A#0)
                             </p> -->
 							<p><a href="https://www.math.colostate.edu/~king/codex/" target="_blank">CodEx Seminar</a> 06/07/2022: Hermitian matrices of roots of unity and their characteristic polynomials.
-								<iframe width="350" height="215" style="align:center; border-style: none;"
+								<div style="display: flex; justify-content: center;"><iframe width="350" height="215" style="border-style: none;"
 									src="https://www.youtube.com/embed/BQcNlZS9uiQ?t=20s"
 									allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen>
-								</iframe>
+								</iframe></div>
 							</p>
 							<p> <a href="https://homepages.dcc.ufmg.br/~gabriel/AGT/" target="_blank">AGT Seminar</a> 13/06/2022: Maximal cliques in strongly regular graphs. 
 													
-								<iframe width="350" height="215" style="align:center; border-style: none;"
+								<div style="display: flex; justify-content: center;"><iframe width="350" height="215" style="border-style: none;"
 												src="https://www.youtube.com/embed/EFswMDmbXRo?t=12s"
 												allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen>
-								</iframe>
+								</iframe></div>
 							</p>
 							<p><a href="https://www.math.colostate.edu/~king/codex/" target="_blank">CodEx Seminar</a> 13/04/2021: Real equiangular lines in low dimensions. 
-								<iframe width="350" height="215" style="align:center; border-style: none;"
+								<div style="display: flex; justify-content: center;"><iframe width="350" height="215" style="border-style: none;"
 									src="https://www.youtube.com/embed/ZdoNVdMTJA8?t=20s" iframe-src="https://www.youtube.com/embed/"
 									allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen>
-								</iframe>
+								</iframe></div>
 							</p>
 							<h3>Mini-courses</h3>
 							<p> <a href="http://www.crm.umontreal.ca/2022/Graph22/index_e.php" target="_blank">Graph Theory, Algebraic Combinatorics and Mathematical Physics</a> August 2022: Equiangular lines.
 	
-								<iframe width="350" height="215" style="align:center; border-style: none;"
+								<div style="display: flex; justify-content: center;"><iframe width="350" height="215" style="border-style: none;"
 												src="https://www.youtube.com/embed/videoseries?list=PLKNR1L7yi-N_IOp0Xm1_qnTJsyeU1wUkF"
 												allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen>
-								</iframe>
+								</iframe></div>
 							</p>
 							<p>
 								Check out the <a href="talks/Montreal_lectures.pdf" target="_blank">Lecture Notes</a>. 
