--- a/index.html
+++ b/index.html
@@ -140,9 +140,9 @@
 		</div>
 	</body>
 </html>
-			<script type="text/javascript" src="jquery.3.3.1.js">
+			<script type="text/javascript" src="jquery.3.3.1.js"/>
 			<!-- <script src="http://code.jquery.com/jquery-latest.js" type="text/javascript"></script> -->
-			<script type="text/javascript" src="jquery.sticky.js">
+			<script type="text/javascript" src="jquery.sticky.js"/>
 			<script type="text/javascript">
 			var papers =
 			[  ["Bootstrapping cascaded random matrix models: correlations in permutations of matrix products",
