--- a/index.html
+++ b/index.html
@@ -138,11 +138,9 @@
 			<div id="update"></div>
 			<div id="heightpad"></div>
 		</div>
-	</body>
-</html>
-			<script type="text/javascript" src="jquery.3.3.1.js"/>
+			<script type="text/javascript" src="jquery.3.3.1.js"></script>
 			<!-- <script src="http://code.jquery.com/jquery-latest.js" type="text/javascript"></script> -->
-			<script type="text/javascript" src="jquery.sticky.js"/>
+			<script type="text/javascript" src="jquery.sticky.js"></script>
 			<script type="text/javascript">
 			var papers =
 			[  ["Bootstrapping cascaded random matrix models: correlations in permutations of matrix products",
@@ -1394,3 +1392,5 @@
 				<script type="text/javascript" async
 				  src="https://cdnjs.cloudflare.com/ajax/libs/mathjax/2.7.1/MathJax.js?config=TeX-MML-AM_CHTML">
 				</script>
+			</body>
+</html>
