--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html xmlns="http://www.w3.org/1999/xhtml">
+<html xmlns="http://www.w3.org/1999/xhtml" lang="en">
 	<head>
 		<meta http-equiv="X-UA-Compatible" content="IE=EDGE">
 		<meta http-equiv="content-type" content="text/html;charset=utf-8">
@@ -1284,7 +1284,7 @@
 								<ul>
 									<li class="first"><a id="arxiv-link" href="http://arxiv.org/a/greaves_g_1" target="_blank">-arXiv-</a></li>
 									<li><a id="scholar-link" href="https://scholar.google.com/citations?user=9Tgz9GoAAAAJ" target="_blank">-Scholar-</a></li>
-	                				<li><a id="orcid-link" itemprop="sameAs" content="https://orcid.org/0000-0002-7342-4790" href="https://orcid.org/0000-0002-7342-4790" target="orcid.widget" rel="me noopener noreferrer">-ORCID iD-</a></li>
+	                				<li><a id="orcid-link" content="https://orcid.org/0000-0002-7342-4790" href="https://orcid.org/0000-0002-7342-4790" target="orcid.widget" rel="me noopener noreferrer">-ORCID iD-</a></li>
 								</ul>
 							</div>
 						</div>
