--- a/index.html
+++ b/index.html
@@ -137,10 +137,10 @@
 			<div id="update"></div>
 			<div id="heightpad"></div>
 		</div>
-		<script type="text/javascript" src="jquery.3.3.1.js"></script>
+		<script src="jquery.3.3.1.js"></script>
 			<!-- <script src="http://code.jquery.com/jquery-latest.js" type="text/javascript"></script> -->
-			<script type="text/javascript" src="jquery.sticky.js"></script>
-			<script type="text/javascript">
+			<script src="jquery.sticky.js"></script>
+			<script>
 			var papers =
 			[  ["Bootstrapping cascaded random matrix models: correlations in permutations of matrix products",
 				"Byrnes and Foreman",
@@ -822,7 +822,7 @@
 	"null"]	
 	];
 			</script>
-			<script type="text/javascript">
+			<script>
 			//<![CDATA[
 				var up = [];
 				var now = [];
@@ -1140,7 +1140,7 @@
 			});
 			//]]>
 			</script>
-			<script type="text/javascript">
+			<script>
 			var monthNames = [
 			  "January", "February", "March",
 			  "April", "May", "June", "July",
@@ -1180,7 +1180,7 @@
 				return str;
 			}
 			</script>
-			<script type="text/javascript">
+			<script>
 				var inprog = [];
 				var preprint = [];
 				var accepted = [];
@@ -1277,10 +1277,8 @@
 				return str;
 			}
 			</script>
-  			<script type="text/javascript">
+  			<script>
   			var artstr ="";
-  			</script>
-  			<script type="text/javascript">
   			if(ppcount > 0){
   				artstr += '<h4>Under review</h4>\n';
   					for (x = 1; x <= ppcount; x++) {
@@ -1317,8 +1315,6 @@
 				    else {calstr += format_event(x,now[x][0],now[x][1], now[x][2], now[x][3], now[x][4], now[x][5],"null");}
 				} 
 			}
-			</script>
-			<script type="text/javascript">
 			if(upcount > 0){
 				calstr += '<h3>Upcoming</h3>\n';
 					for (x = 1; x <= upcount; x++) {
@@ -1326,8 +1322,6 @@
 					    else {calstr += format_event(x,up[x][0],up[x][1], up[x][2], up[x][3], up[x][4], up[x][5],"null");}
 					} 
 			}
-			</script>
-			<script type="text/javascript">
 			if(pastcount > 0){
 				calstr += '<h3>Past</h3>\n';
 				calstr += '<div id="pastbox">\n';
@@ -1353,8 +1347,6 @@
 			calstr +=  '<li><a href="javascript:void(0)" id="next">>></a></li>\n';
 			calstr += '</ul></div>\n';
 			}
-			</script>
-  			<script type="text/javascript">
   			var projstr ="";
   			if(ipcount > 0){
   				projstr += '<h4>Current projects</h4>\n';
@@ -1362,8 +1354,6 @@
   				    projstr += format_article(0,inprog[x][0],inprog[x][1],inprog[x][2], inprog[x][3], inprog[x][4]);
   				} 
   			}
-  			</script>
-			<script type="text/javascript">
 			$("#artcontainer").html(artstr);
 			$("#calcontainer").html(calstr);
 			$("#projcontainer").html(projstr);
@@ -1388,7 +1378,7 @@
 			  tex2jax: {inlineMath: [['$','$'], ['\\(','\\)']]}
 			});
 			</script>
-				<script type="text/javascript" async
+				<script  async
 				  src="https://cdnjs.cloudflare.com/ajax/libs/mathjax/2.7.1/MathJax.js?config=TeX-MML-AM_CHTML">
 				</script>
 	</body>
