--- a/index.html
+++ b/index.html
@@ -148,7 +148,7 @@
 				"https://arxiv.org/abs/2405.02541",
 				null,
 				[],
-				,null,
+				,"to appear in ",
 			null],
 				["Constructions of $t$-designs from weighing matrices and walk-regular graphs",
 				"Suda",
