--- a/index.html
+++ b/index.html
@@ -1278,6 +1278,8 @@
 			}
 			</script>
   			<script>
+				console.log(ppcount);
+				console.log(acccount);
   			var artstr ="";
   			if(ppcount > 0){
   				artstr += '<h4>Under review</h4>\n';
