--- a/index.html
+++ b/index.html
@@ -1199,6 +1199,7 @@
 					{
 						if(papers[x][4] == null)
 						{
+							console.log(papers[x][6]);
 							if(papers[x][6] == null)
 							{
 								ppcount++;
