--- a/index.html
+++ b/index.html
@@ -1200,6 +1200,7 @@
 						if(papers[x][4] == null)
 						{
 							console.log(papers[x][6]);
+							console.log(papers[x]);
 							if(papers[x][6] == null)
 							{
 								ppcount++;
