--- a/index.html
+++ b/index.html
@@ -148,7 +148,7 @@
 				"https://arxiv.org/abs/2405.02541",
 				null,
 				[],
-				,"to appear in ",
+				"to appear in ",
 			null],
 				["Constructions of $t$-designs from weighing matrices and walk-regular graphs",
 				"Suda",
@@ -156,7 +156,7 @@
 				"https://arxiv.org/abs/2402.17528",
 				null,
 				[],
-				,null,
+				null,
 			null],
 						  ["Real equiangular lines in dimension 18 and the Jacobi identity for complementary subgraphs",
 				"Syatriadi",
