--- a/index.html
+++ b/index.html
@@ -148,8 +148,8 @@
 				"https://arxiv.org/abs/2405.02541",
 				null,
 				[],
-				"to appear in ",
-			null],
+				"to appear in Physical Review E",
+			21100855841],
 				["Constructions of $t$-designs from weighing matrices and walk-regular graphs",
 				"Suda",
 				"We provide a method to construct t-designs from weighing matrices and walk-regular graphs. One instance of our method can produce a 3-design from any (symmetric or skew-symmetric) conference matrix, thereby providing a partial answer to a question of Gunderson and Semeraro JCTB 2017. We explore variations of our method on some matrices that satisfy certain combinatorial restrictions. In particular, we show that there exist various infinite families of partially balanced incomplete block designs with block size four on the binary Hamming schemes and the 3-class association schemes attached to symmetric designs, and regular pairwise balanced designs with block sizes three and four.",
