--- a/index.html
+++ b/index.html
@@ -148,7 +148,7 @@
 				"https://arxiv.org/abs/2405.02541",
 				null,
 				[],
-				"to appear in Physical Review E",
+				"To appear in Physical Review E",
 			21100855841],
 				["Constructions of $t$-designs from weighing matrices and walk-regular graphs",
 				"Suda",
