--- a/index.html
+++ b/index.html
@@ -142,7 +142,16 @@
 			<script src="jquery.sticky.js"></script>
 			<script>
 			var papers =
-			[  ["Bootstrapping cascaded random matrix models: correlations in permutations of matrix products",
+			[  ["The coherent rank of a graph with three eigenvalues",
+				"Yip",
+				"We characterise graphs that have three distinct eigenvalues and coherent ranks 8 and 9, linking the former to certain symmetric 2-designs and the latter to specific quasi-symmetric 2-designs. This characterisation leads to the discovery of a new biregular graph with three distinct eigenvalues. Additionally, we demonstrate that the coherent rank of a triregular graph with three distinct eigenvalues is at least 14. Finally, we introduce a conjecturally infinite family of biregular graphs with three distinct eigenvalues, obtained by switching the block graphs of orthogonal arrays.",
+				"https://arxiv.org/abs/2406.17395",
+				null,
+				[],
+				null,
+			null],
+			 
+				["Bootstrapping cascaded random matrix models: correlations in permutations of matrix products",
 				"Byrnes and Foreman",
 				"Random matrix theory is a useful tool in the study of the physics of multiple scattering systems, often striking a balance between computation speed and physical rigour. Propagation of waves through thick disordered media, as arises in for example optical scattering or electron transport, typically necessitates cascading of multiple random matrices drawn from an underlying ensemble for thin media, greatly increasing computational burden. Here we propose a dual pool based bootstrapping approach to speed up statistical studies of scattering in thick random media. We examine how potential matrix reuse in a pool based approach can impact statistical estimates of population averages. Specifically, we discuss how both bias and additional variance in the sample mean estimator are introduced through bootstrapping. In the diffusive scattering regime, the extra estimator variance is shown to originate from samples in which cascaded transfer matrices are permuted matrix products. Through analysis of the combinatorics and cycle structure of permutations we quantify the resulting correlations. Proofs of several analytic formulae enumerating the frequency with which correlations of different strengths occur are derived. Extension to the ballistic regime is briefly considered.",
 				"https://arxiv.org/abs/2405.02541",
