--- a/index.html
+++ b/index.html
@@ -142,7 +142,25 @@
 			<script src="jquery.sticky.js"></script>
 			<script>
 			var papers =
-			[  ["The coherent rank of a graph with three eigenvalues",
+			[  ["Chromatic polynomials of signed graphs and dominating-vertex deletion
+  formulae",
+				"Syatriadi and Utomo",
+				"We exhibit non-switching-isomorphic signed graphs that share a common
+underlying graph and common chromatic polynomials, thereby answering a question
+posed by Zaslavsky. For various joins of all-positive or all-negative signed
+complete graphs, we derive a closed-form expression for their chromatic
+polynomials. As a generalisation of the chromatic polynomials for a signed
+graph, we introduce a new pair of bivariate chromatic polynomials. We establish
+recursive dominating-vertex deletion formulae for these bivariate chromatic
+polynomials. Finally, we show that for certain families of signed threshold
+graphs, isomorphism is equivalent to the equality of bivariate chromatic
+polynomials.",
+			    "https://arxiv.org/abs/2407.00883",
+				null,
+				[],
+				null,
+			null],
+			 ["The coherent rank of a graph with three eigenvalues",
 				"Yip",
 				"We characterise graphs that have three distinct eigenvalues and coherent ranks 8 and 9, linking the former to certain symmetric 2-designs and the latter to specific quasi-symmetric 2-designs. This characterisation leads to the discovery of a new biregular graph with three distinct eigenvalues. Additionally, we demonstrate that the coherent rank of a triregular graph with three distinct eigenvalues is at least 14. Finally, we introduce a conjecturally infinite family of biregular graphs with three distinct eigenvalues, obtained by switching the block graphs of orthogonal arrays.",
 				"https://arxiv.org/abs/2406.17395",
