--- a/index.html
+++ b/index.html
@@ -142,19 +142,9 @@
 			<script src="jquery.sticky.js"></script>
 			<script>
 			var papers =
-			[  ["Chromatic polynomials of signed graphs and dominating-vertex deletion
-  formulae",
+			[  ["Chromatic polynomials of signed graphs and dominating-vertex deletion formulae",
 				"Syatriadi and Utomo",
-				"We exhibit non-switching-isomorphic signed graphs that share a common
-underlying graph and common chromatic polynomials, thereby answering a question
-posed by Zaslavsky. For various joins of all-positive or all-negative signed
-complete graphs, we derive a closed-form expression for their chromatic
-polynomials. As a generalisation of the chromatic polynomials for a signed
-graph, we introduce a new pair of bivariate chromatic polynomials. We establish
-recursive dominating-vertex deletion formulae for these bivariate chromatic
-polynomials. Finally, we show that for certain families of signed threshold
-graphs, isomorphism is equivalent to the equality of bivariate chromatic
-polynomials.",
+				"We exhibit non-switching-isomorphic signed graphs that share a common underlying graph and common chromatic polynomials, thereby answering a question posed by Zaslavsky. For various joins of all-positive or all-negative signed complete graphs, we derive a closed-form expression for their chromatic polynomials. As a generalisation of the chromatic polynomials for a signed graph, we introduce a new pair of bivariate chromatic polynomials. We establish recursive dominating-vertex deletion formulae for these bivariate chromatic polynomials. Finally, we show that for certain families of signed threshold graphs, isomorphism is equivalent to the equality of bivariate chromatic polynomials.",
 			    "https://arxiv.org/abs/2407.00883",
 				null,
 				[],
