--- a/index.html
+++ b/index.html
@@ -10,6 +10,9 @@
         <link rel="icon" type="image/png" sizes="16x16" href="./favicon-16x16.png">
         <link rel="manifest" href="./site.webmanifest">
 		<link rel="stylesheet" type="text/css" href="./styles.css">
+		<link href='http://fonts.googleapis.com/css?family=Open+Sans' rel='stylesheet' type='text/css'>
+		<link href='http://fonts.googleapis.com/css?family=Lato' rel='stylesheet' type='text/css'>
+
 		<title>Gary R. W. Greaves</title>
 	</head>
 	<body>
