--- a/index.html
+++ b/index.html
@@ -12,8 +12,7 @@
 		<link rel="stylesheet" type="text/css" href="./styles.css">
 		<link rel="preconnect" href="https://fonts.googleapis.com">
 		<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-		<link href="https://fonts.googleapis.com/css2?family=Lato:wght@100&display=swap" rel="stylesheet">
-		<link href='http://fonts.googleapis.com/css?family=Open+Sans' rel='stylesheet' type='text/css'>
+		<link href="https://fonts.googleapis.com/css2?family=Lato:wght@100&family=Open+Sans:wght@300..800&display=swap" rel="stylesheet">
 		<title>Gary R. W. Greaves</title>
 	</head>
 	<body>
