--- a/index.html
+++ b/index.html
@@ -154,7 +154,7 @@
 								</iframe></div>
 							</div>
 							<p>
-								Check out the <a href="talks/Montreal_lectures.pdf" target="_blank">Lecture Notes</a>. 
+								Check out the <a href="talks/Montreal_Lectures.pdf" target="_blank">Lecture Notes</a>. 
 							</p>
 						</div>
 						<div class="gone"><p>This webpage was written and maintained by Gary Royden Watson Greaves since 2016.</p></div>
