--- a/index.html
+++ b/index.html
@@ -62,11 +62,11 @@
 			I am an Assistant Professor of the <a href="https://www.ntu.edu.sg/spms/about-us/mathematics" target="_blank">Division of Mathematical Sciences</a> in the <a href="https://www.ntu.edu.sg/spms" target="_blank">School of Physical and Mathematical Sciences</a> at <a href="http://www.ntu.edu.sg/" target="_blank">Nanyang Technological University - NTU Singapore</a>.
 		</p>
 	
-		<div id="jobOpening">
+		<!-- <div id="jobOpening">
 			<b> Job Opening</b>
 			<br>
 			I am <a href="https://ntu.wd3.myworkdayjobs.com/en-US/Careers/job/NTU-Main-Campus-Singapore/Research-Fellow--Algebra-and-Combinatorics-_R00016691-1">hiring a postdoctoral fellow</a>.  If you are interested to work with me, please get in touch.
-		</div>
+		</div> -->
 <p>My main research interests are in algebraic graph theory, combinatorial design theory, and computational discrete mathematics.</p>
 
 
