--- a/index.html
+++ b/index.html
@@ -70,7 +70,15 @@
 <p>My main research interests are in algebraic graph theory, combinatorial design theory, and computational discrete mathematics.</p>
 
 
-<h3>Selected Presentations</h3>
+<h3>News</h3>
+		<div class="pres">
+			<strong>Award Recipient</strong> <br/>
+			<div class="name"> Nanyang Education Award (College)</div>
+			<div class="when">Awarded: 6 November 2024</div>
+			<div class="where"><a href="https://ebook.ntu.edu.sg/nanyang-awards-2024/full-view.html" target="_blank">E-book</a></div>
+			<img alt="" src="posters/neaCit.jpg">
+			<div class="clear"></div>
+		</div>
 		<div class="pres">
 			<img style="float: right; width: 60%" alt="" src="posters/cc24.jpg">
 			<strong>Invited Speaker</strong> <br/>
