--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
 			<div class="name"> Nanyang Education Award (College)</div>
 			<div class="when">Awarded: 6 November 2024</div>
 			<div class="where"><a href="https://ebook.ntu.edu.sg/nanyang-awards-2024/full-view.html" target="_blank">E-book</a></div>
-			<img style="width: 90%" alt="" src="posters/neaCit24.jpg">
+			<img style="float: left; width: 40%; padding-right: 2em"" alt="" src="posters/nea.jpg">
 			<div class="clear"></div>
 		</div>
 		<div class="pres">
