--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
 			<strong>Award Recipient</strong> <br/>
 			<div class="name"> Nanyang Education Award (College)</div>
 			<div class="when">Awarded: 6 November 2024</div>
-			<div class="where"><a href="https://ebook.ntu.edu.sg/nanyang-awards-2024/full-view.html" target="_blank">E-book</a></div>
+			<div class="where">Nanyang Awards <a href="https://ebook.ntu.edu.sg/nanyang-awards-2024/full-view.html" target="_blank">E-book</a></div>
 			<div class="clear"></div>
 		</div>
 		<div class="pres">
