--- a/index.html
+++ b/index.html
@@ -874,7 +874,19 @@
 		"Combinatorics in Christchurch",
 			"University of Canterbury, Christchurch, New Zealand",
 		"https://combinatoricsinchristchurch.github.io/",
-	"null"]	
+	"null"],
+				["2024-12-02",
+		"2024-12-06",
+		"46th Australasian Combinatorics Conference",
+			"The University of Queensland, Brisbane, Australia",
+		"https://46acc.github.io/",
+	"null"],
+	["2025-06-23",
+		"2025-06-28",
+		"TerwilligerFest - Combinatorics around the q-Onsager algebra",
+			"Ramada Resort, Kranjska Gora, Slovenia",
+		"https://conferences.famnit.upr.si/event/32/",
+	"null"]
 	];
 			</script>
 			<script>
