--- a/index.html
+++ b/index.html
@@ -186,7 +186,7 @@
 			    "https://arxiv.org/abs/2407.00883",
 				null,
 				[],
-				null,
+				"To appear in J. Graph Theory,
 			null],
 			 ["The coherent rank of a graph with three eigenvalues",
 				"Yip",
