--- a/index.html
+++ b/index.html
@@ -186,8 +186,8 @@
 			    "https://arxiv.org/abs/2407.00883",
 				null,
 				[],
-				"To appear in J. Graph Theory,
-			null],
+				"To appear in J. Graph Theory",
+			23898],
 			 ["The coherent rank of a graph with three eigenvalues",
 				"Yip",
 				"We characterise graphs that have three distinct eigenvalues and coherent ranks 8 and 9, linking the former to certain symmetric 2-designs and the latter to specific quasi-symmetric 2-designs. This characterisation leads to the discovery of a new biregular graph with three distinct eigenvalues. Additionally, we demonstrate that the coherent rank of a triregular graph with three distinct eigenvalues is at least 14. Finally, we introduce a conjecturally infinite family of biregular graphs with three distinct eigenvalues, obtained by switching the block graphs of orthogonal arrays.",
