--- a/seeNTU/triangle.html
+++ b/seeNTU/triangle.html
@@ -63,7 +63,7 @@
 
         var centerX = 350;
         var centerY = 350;
-        var sideLength = 600;
+        var sideLength = 692.820323027550917410978536602;
         var trianglePoints = [
           [centerX, centerY - sideLength/Math.sqrt(3)],
           [centerX + sideLength/2, centerY + sideLength/(2*Math.sqrt(3))],
