--- a/seeNTU/triangle.html
+++ b/seeNTU/triangle.html
@@ -185,7 +185,7 @@
           var sum = redLength + blueLength + yellowLength;
 
           // update message
-          msg.innerHTML = 'Red line: ' + redLength + ';<br> Blue line: ' + blueLength + ';<br> Yellow line: ' + yellowLength + ';<br> R + B + Y: ' + sum;
+          msg.innerHTML = 'R: ' + redLength + ';<br> B: ' + blueLength + ';<br> Y: ' + yellowLength + ';<br> R + B + Y= ' + sum;
       }
         });
     </script>
