--- a/NTUopenhouse.html
+++ b/NTUopenhouse.html
@@ -29,8 +29,8 @@
     </style>
 </head>
 <body>
-    <img src="ntu-crest.png" alt="NTU Logo">
-    <a href="https://grwgrvs.github.io/seeNTU/triangle.html">Equilateral Triangle</a>
-    <a href="https://grwgrvs.github.io/seeNTU/sperner.html">Sperner Triangle</a>
+    <img src="./ntu-crest.png" alt="NTU Logo">
+    <a href="https://grwgrvs.github.io/seeNTU/triangle.html" target="_blank">Equilateral Triangle</a>
+    <a href="https://grwgrvs.github.io/seeNTU/sperner.html" target="_blank">Sperner Triangle</a>
 </body>
 </html>
