--- a/NTUopenhouse.html
+++ b/NTUopenhouse.html
@@ -22,7 +22,7 @@
             color: #d00;
         }
         img {
-            max-width: 1058px;
+            max-width: 70%;
             display: block;
             margin: 0 auto 20px;
         }
