--- a/seeNTU/triangle.html
+++ b/seeNTU/triangle.html
@@ -7,7 +7,7 @@
         font-size:1.5em;
       }
         svg {
-        width: 1000px;
+        width: 600px;
         height: auto;
       }
         #msg {
@@ -30,7 +30,7 @@
   </head>
   <body>
       <div id="msg">Click inside the triangle</div>
-    <svg width="600" height="1000">
+    <svg>
       <polygon id="triangle" points="" />
       <circle id="object" r="10" cx="0" cy="0" />
       <!-- <circle id="in" r="5" cx="0" cy="0" /> -->
