--- a/seeNTU/triangle.html
+++ b/seeNTU/triangle.html
@@ -7,8 +7,8 @@
         font-size:1.5em;
       }
         svg {
-        width: 600px;
-        height: auto;
+        width: 650px;
+        height: 1000px;
       }
         #msg {
           position: relative;
