--- a/seeNTU/sperner.html
+++ b/seeNTU/sperner.html
@@ -5,8 +5,8 @@
     <style>
 
         svg {
-        width: 1000px;
-        height: auto;
+        width: 600px;
+        height: 600px;
       }
 
       .circle {
