--- a/seeNTU/triangle.html
+++ b/seeNTU/triangle.html
@@ -7,8 +7,8 @@
         font-size:1.5em;
       }
         svg {
-        width: 1000px;
-        height: auto;
+        width: 800px;
+        height: 800px;
       }
         #msg {
           position: relative;
@@ -30,7 +30,7 @@
   </head>
   <body>
       <div id="msg">Click inside the triangle</div>
-    <svg viewBox="0 0 500 500">
+    <svg>
       <polygon id="triangle" points="" />
       <circle id="object" r="10" cx="0" cy="0" />
       <!-- <circle id="in" r="5" cx="0" cy="0" /> -->
