--- a/index.html
+++ b/index.html
@@ -881,6 +881,12 @@
 			"The University of Queensland, Brisbane, Australia",
 		"https://46acc.github.io/",
 	"null"],
+	["2025-05-26",
+		"2025-05-30",
+		"8th Workshop on Design Theory, Hadamard Matrices and Applications (Hadamard 2025)",
+			"Universidad de Sevilla, Sevilla",
+		"https://gestioneventos.us.es/hadamard2025",
+	"null"]
 	["2025-06-23",
 		"2025-06-28",
 		"TerwilligerFest - Combinatorics around the q-Onsager algebra",
