--- a/index.html
+++ b/index.html
@@ -886,7 +886,7 @@
 		"8th Workshop on Design Theory, Hadamard Matrices and Applications (Hadamard 2025)",
 			"Universidad de Sevilla, Sevilla",
 		"https://gestioneventos.us.es/hadamard2025",
-	"null"]
+	"null"],
 	["2025-06-23",
 		"2025-06-28",
 		"TerwilligerFest - Combinatorics around the q-Onsager algebra",
