--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
 							</ul>
 							<div id="alt">
 								<ul>
-									<li class="first"><a id="arxiv-link" href="http://arxiv.org/a/greaves_g_1" target="_blank">-arXiv-</a></li>
+									<li class="first"><a id="arxiv-link" href="http://arxiv.org/a/greaves_g_1" target="_blank"><img src="images/arxiv-logomark-small.svg" alt=""></a></li>
 									<li><a id="scholar-link" href="https://scholar.google.com/citations?user=9Tgz9GoAAAAJ" target="_blank">-Scholar-</a></li>
 	                				<li><a id="orcid-link" content="https://orcid.org/0000-0002-7342-4790" href="https://orcid.org/0000-0002-7342-4790" target="orcid.widget" rel="me noopener noreferrer">-ORCID iD-</a></li>
 								</ul>
