--- a/index.html
+++ b/index.html
@@ -30,9 +30,9 @@
 							</ul>
 							<div id="alt">
 								<ul>
-									<li class="first"><a id="arxiv-link" href="http://arxiv.org/a/greaves_g_1" target="_blank"><img height="32" src="images/arxiv-logomark-small.svg" alt=""></a></li>
-									<li><a id="scholar-link" href="https://scholar.google.com/citations?user=9Tgz9GoAAAAJ" target="_blank"><img height="32" src="images/google-scholar.svg" alt=""></a></li>
-	                				<li><a id="orcid-link" content="https://orcid.org/0000-0002-7342-4790" href="https://orcid.org/0000-0002-7342-4790" target="orcid.widget" rel="me noopener noreferrer"><img width="32" src="images/32px-ORCID_iD.svg.png" alt=""></a></li>
+									<li class="first"><a id="arxiv-link" href="http://arxiv.org/a/greaves_g_1" target="_blank"><img height="32" src="images/arxiv-logomark-small.svg" alt="arXiv"></a></li>
+									<li><a id="scholar-link" href="https://scholar.google.com/citations?user=9Tgz9GoAAAAJ" target="_blank"><img height="32" src="images/google-scholar.svg" alt="Google Scholar"></a></li>
+	                				<li><a id="orcid-link" content="https://orcid.org/0000-0002-7342-4790" href="https://orcid.org/0000-0002-7342-4790" target="orcid.widget" rel="me noopener noreferrer"><img width="32" src="images/32px-ORCID_iD.svg.png" alt="ORCID iD"></a></li>
 								</ul>
 							</div>
 						</div>
