--- a/index.html
+++ b/index.html
@@ -72,6 +72,14 @@
 
 <h3>News</h3>
 		<div class="pres">
+			<img style="float: right; width: 60%" alt="" src="images/whyPrize.jpg">
+			<strong>Problem Bounty Award</strong> <br/>
+			<div class="name">Combinatorics in Christchurch </div>
+			<div class="when">Awarded: 24 March 2025 </div>
+			<div class="where">See <a href="https://ebook.ntu.edu.sg/nanyang-awards-2024/full-view.html" target="_blank">Wei-Hsuan Yu's conjecture</a>.  Jeven Syatriadi and I collected the award of 14+16+17 USD for solving part of Wei-Hsuan's conjecture in 14, 16, and 17 dimensions.</div>
+			<div class="clear"></div>
+		</div>					
+		<div class="pres">
 			<img style="float: left; width: 15%; padding-right: 2em"" alt="" src="posters/nea.jpg">
 			<strong>Award Recipient</strong> <br/>
 			<div class="name"> Nanyang Education Award (College)</div>
