--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
 
 <h3>News</h3>
 		<div class="pres">
-			<img style="float: right; width: 60%" alt="" src="images/whyPrize.jpg">
+			<img style="float: right; width: 60%" alt="" src="images/whyPrize.JPG">
 			<strong>Problem Bounty Award</strong> <br/>
 			<div class="name">Combinatorics in Christchurch </div>
 			<div class="when">Awarded: 24 March 2025 </div>
