--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
 			<strong>Problem Bounty Award</strong> <br/>
 			<div class="name">Wei-Hsuan Yu's Prize</div>
 			<div class="when">Awarded: 24 March 2025 </div>
-			<div class="where">See <a href="https://ebook.ntu.edu.sg/nanyang-awards-2024/full-view.html" target="_blank">Wei-Hsuan Yu's conjecture</a>.  
+			<div class="where">See <a href="https://drive.google.com/file/d/1ZZCKji7Oh6zcIOy5Vd1t4K0WSC8UYIO6/view" target="_blank">Wei-Hsuan Yu's conjecture</a>.  
 				<br><br>Jeven Syatriadi and I collected the award of 14+16+17 USD for solving (together with Pavlo Yatsyna) part of Wei-Hsuan's conjecture in 14, 16, and 17 dimensions.</div>
 			<div class="clear"></div>
 		</div>					
