--- a/index.html
+++ b/index.html
@@ -189,7 +189,15 @@
 			<script src="jquery.sticky.js"></script>
 			<script>
 			var papers =
-			[  ["Chromatic polynomials of signed graphs and dominating-vertex deletion formulae",
+			[  ["Real-rooted integer polynomial enumeration algorithms and interlacing polynomials via linear programming",
+				"Syatriadi",
+				"We extend the algorithms of Robinson, Smyth, and McKee-Smyth to enumerate all real-rooted integer polynomials of a fixed degree, where the first few (at least three) leading coefficients are specified. Additionally, we introduce new linear programming algorithms to enumerate all feasible interlacing polynomials of a given polynomial that comes from a certain family of real-rooted integer polynomials. These algorithms are further specialised for the study of real equiangular lines, incorporating additional number-theoretic constraints to restrict the enumeration. Our improvements significantly enhance the efficiency of the methods presented in previous work by the authors.",
+				"https://arxiv.org/abs/2504.09241",
+				null,
+				[],
+				null,
+			null],
+			 ["Chromatic polynomials of signed graphs and dominating-vertex deletion formulae",
 				"Syatriadi and Utomo",
 				"We exhibit non-switching-isomorphic signed graphs that share a common underlying graph and common chromatic polynomials, thereby answering a question posed by Zaslavsky. For various joins of all-positive or all-negative signed complete graphs, we derive a closed-form expression for their chromatic polynomials. As a generalisation of the chromatic polynomials for a signed graph, we introduce a new pair of bivariate chromatic polynomials. We establish recursive dominating-vertex deletion formulae for these bivariate chromatic polynomials. Finally, we show that for certain families of signed threshold graphs, isomorphism is equivalent to the equality of bivariate chromatic polynomials.",
 			    "https://arxiv.org/abs/2407.00883",
