--- a/index.html
+++ b/index.html
@@ -189,7 +189,15 @@
 			<script src="jquery.sticky.js"></script>
 			<script>
 			var papers =
-			[  ["Real-rooted integer polynomial enumeration algorithms and interlacing polynomials via linear programming",
+			[["Neumaier graphs from cyclotomy with small coherent rank",
+				"Tan",
+				"Using cyclotomy, we construct a new infinite family of Neumaier graphs that includes infinitely many strongly regular graphs. Notably, this family conjecturally contains infinitely many graphs with coherent rank 6. Our construction also provides the first known examples that answer a question posed by Evans, Goryainov, and Panasenko regarding the existence of Neumaier graphs whose nexus is not a power of 2. In addition, we show that a construction of Greaves and Koolen yields an infinite family of Neumaier graphs with coherent rank 6.",
+				"https://arxiv.org/abs/2504.12026",
+				null,
+				[],
+				null,
+			null],
+				["Real-rooted integer polynomial enumeration algorithms and interlacing polynomials via linear programming",
 				"Syatriadi",
 				"We extend the algorithms of Robinson, Smyth, and McKee-Smyth to enumerate all real-rooted integer polynomials of a fixed degree, where the first few (at least three) leading coefficients are specified. Additionally, we introduce new linear programming algorithms to enumerate all feasible interlacing polynomials of a given polynomial that comes from a certain family of real-rooted integer polynomials. These algorithms are further specialised for the study of real equiangular lines, incorporating additional number-theoretic constraints to restrict the enumeration. Our improvements significantly enhance the efficiency of the methods presented in previous work by the authors.",
 				"https://arxiv.org/abs/2504.09241",
