--- a/index.html
+++ b/index.html
@@ -209,9 +209,9 @@
 				"Syatriadi and Utomo",
 				"We exhibit non-switching-isomorphic signed graphs that share a common underlying graph and common chromatic polynomials, thereby answering a question posed by Zaslavsky. For various joins of all-positive or all-negative signed complete graphs, we derive a closed-form expression for their chromatic polynomials. As a generalisation of the chromatic polynomials for a signed graph, we introduce a new pair of bivariate chromatic polynomials. We establish recursive dominating-vertex deletion formulae for these bivariate chromatic polynomials. Finally, we show that for certain families of signed threshold graphs, isomorphism is equivalent to the equality of bivariate chromatic polynomials.",
 			    "https://arxiv.org/abs/2407.00883",
+				"J. Graph Theory (2025)",
+				[["DOI","http://doi.org/10.1002/jgt.23236"]],
 				null,
-				[],
-				"To appear in J. Graph Theory",
 			23898],
 			 ["The coherent rank of a graph with three eigenvalues",
 				"Yip",
