--- a/city/index.html
+++ b/city/index.html
@@ -26,7 +26,7 @@ html,body,h1,h2,h3,h4,h5,h6 {font-family: "Roboto", sans-serif}
         <div class="w3-display-container">
           <img src="../images/nea480.jpeg" style="width:100%" alt="Avatar">
           <div class="w3-display-bottomleft w3-container w3-text-white">
-            <h2>Gary Greves</h2>
+            <h2>Gary Greaves</h2>
           </div>
         </div>
         <div class="w3-container">
