--- a/city/index.html
+++ b/city/index.html
@@ -25,7 +25,7 @@ html,body,h1,h2,h3,h4,h5,h6 {font-family: "Roboto", sans-serif}
       <div class="w3-white w3-text-grey w3-card-4">
         <div class="w3-display-container">
           <img src="../images/nea480.jpeg" style="width:100%" alt="Avatar">
-          <div class="w3-display-bottommiddle w3-container w3-white w3-text-black w3-opacity">
+          <div style="{position:absolute;bottom:0;}" class="w3-container w3-white w3-text-black w3-opacity">
             <h2 class="w3-opacity-off">Gary Greaves</h2>
           </div>
         </div>
