--- a/city/index.html
+++ b/city/index.html
@@ -89,12 +89,12 @@ html,body,h1,h2,h3,h4,h5,h6 {font-family: "Roboto", sans-serif}
         </div>
         <div class="w3-container">
           <h5 class="w3-opacity"><b>Senior Lecturer / Nanyang Technological University, Singapore</b></h5>
-          <h6 class="w3-text-teal"><i class="fa fa-calendar fa-fw w3-margin-right"></i>April 2024 - March 2024</h6>
+          <h6 class="w3-text-teal"><i class="fa fa-calendar fa-fw w3-margin-right"></i>Spetember 2020 - March 2024</h6>
           <hr>
         </div>
         <div class="w3-container">
           <h5 class="w3-opacity"><b>Lecturer / Nanyang Technological University, Singapore</b></h5>
-          <h6 class="w3-text-teal"><i class="fa fa-calendar fa-fw w3-margin-right"></i>July 2016 - </h6>
+          <h6 class="w3-text-teal"><i class="fa fa-calendar fa-fw w3-margin-right"></i>July 2016 - September 2020</h6>
           <hr>
         </div>
         <div class="w3-container">
