--- a/city/index.html
+++ b/city/index.html
@@ -37,19 +37,17 @@ html,body,h1,h2,h3,h4,h5,h6 {font-family: "Roboto", sans-serif}
           <hr>
 
           <p class="w3-large"><b><i class="fa fa-asterisk fa-fw w3-margin-right w3-text-teal"></i>Student Teaching Feedback</b></p>
-          <p>Graph Theory 2024 - 2025 Semester 1</p>
+          <p>Graph Theory Lecture 2024 - 2025 Semester 1</p>
           <div class="w3-light-grey w3-round-xlarge w3-small">
-            <div class="w3-container w3-center w3-round-xlarge w3-teal" style="width:90%">90%</div>
+            <div class="w3-container w3-center w3-round-xlarge w3-teal" style="width:97.78%">97.78%</div>
           </div>
-          <p>Photography</p>
+          <p>Graph Theory Tutorial 2024 - 2025 Semester 1</p>
           <div class="w3-light-grey w3-round-xlarge w3-small">
-            <div class="w3-container w3-center w3-round-xlarge w3-teal" style="width:80%">
-              <div class="w3-center w3-text-white">80%</div>
-            </div>
+            <div class="w3-container w3-center w3-round-xlarge w3-teal" style="width:97.78%">97.78%</div>
           </div>
-          <p>Illustrator</p>
+          <p>Discrete Mathematics Lecture 2023 - 2024 Semester 2</p>
           <div class="w3-light-grey w3-round-xlarge w3-small">
-            <div class="w3-container w3-center w3-round-xlarge w3-teal" style="width:75%">75%</div>
+            <div class="w3-container w3-center w3-round-xlarge w3-teal" style="width:93.92%">93.92%</div>
           </div>
           <p>Media</p>
           <div class="w3-light-grey w3-round-xlarge w3-small">
