--- a/city/index.html
+++ b/city/index.html
@@ -36,7 +36,7 @@ html,body,h1,h2,h3,h4,h5,h6 {font-family: "Roboto", sans-serif}
           <p><i class="fa fa-phone fa-fw w3-margin-right w3-large w3-text-teal"></i>+65 8768 6207</p>
           <hr>
 
-          <p class="w3-large"><b><i class="fa fa-asterisk fa-fw w3-margin-right w3-text-teal"></i>Student Teaching Feedback</b></p>
+          <p class="w3-large"><b><i class="fa fa-bar-chart fa-fw w3-margin-right w3-text-teal"></i>Student Teaching Feedback</b></p>
           <p>Graph Theory Lecture 2024 - 2025 Semester 1</p>
           <div class="w3-light-grey w3-round-xlarge w3-small">
             <div class="w3-container w3-center w3-round-xlarge w3-teal" style="width:97.78%">97.78%</div>
