--- a/city/index.html
+++ b/city/index.html
@@ -37,10 +37,10 @@ html,body,h1,h2,h3,h4,h5,h6 {font-family: "Roboto", sans-serif}
           <hr>
 
           <p class="w3-large"><b><i class="fa fa-bar-chart fa-fw w3-margin-right w3-text-teal"></i>Student Teaching Feedback</b></p>
-          <p>Graph Theory Lecture 2024 - 2025 Semester 1</p>
+          <a href="GraphTheory-2024.pdf" target="_blank"><p>Graph Theory Lecture 2024 - 2025 Semester 1</p>
           <div class="w3-light-grey w3-round-xlarge w3-small">
             <div class="w3-container w3-center w3-round-xlarge w3-teal" style="width:97.78%">97.78%</div>
-          </div>
+          </div></a>
           <p>Graph Theory Tutorial 2024 - 2025 Semester 1</p>
           <div class="w3-light-grey w3-round-xlarge w3-small">
             <div class="w3-container w3-center w3-round-xlarge w3-teal" style="width:97.78%">97.78%</div>
