--- a/city/index.html
+++ b/city/index.html
@@ -41,18 +41,54 @@ html,body,h1,h2,h3,h4,h5,h6 {font-family: "Roboto", sans-serif}
           <div class="w3-light-grey w3-round-xlarge w3-small">
             <div class="w3-container w3-center w3-round-xlarge w3-teal" style="width:97.78%">97.78%</div>
           </div></a>
-          <p>Graph Theory Tutorial 2024 - 2025 Semester 1</p>
+          <a href="DiscreteMathematics-2024.pdf" target="_blank"><p>Discrete Mathematics Lecture 2023 - 2024 Semester 2</p>
           <div class="w3-light-grey w3-round-xlarge w3-small">
-            <div class="w3-container w3-center w3-round-xlarge w3-teal" style="width:97.78%">97.78%</div>
-          </div>
-          <p>Discrete Mathematics Lecture 2023 - 2024 Semester 2</p>
+            <div class="w3-container w3-center w3-round-xlarge w3-teal" style="width:94%">94%</div>
+          </div></a>
+          <a href="MultivariateCalculus-2023.pdf" target="_blank"><p>Multivariate Calculus Lecture 2023 - 2024 Semester 1</p>
           <div class="w3-light-grey w3-round-xlarge w3-small">
-            <div class="w3-container w3-center w3-round-xlarge w3-teal" style="width:93.92%">93.92%</div>
-          </div>
-          <p>Media</p>
+            <div class="w3-container w3-center w3-round-xlarge w3-teal" style="width:95.7%">95.7%</div>
+          </div></a>
+          <a href="GraphTheory-2023.pdf" target="_blank"><p>Graph Theory Lecture 2023 - 2024 Semester 1</p>
           <div class="w3-light-grey w3-round-xlarge w3-small">
-            <div class="w3-container w3-center w3-round-xlarge w3-teal" style="width:50%">50%</div>
-          </div>
+            <div class="w3-container w3-center w3-round-xlarge w3-teal" style="width:95.14%">95.14%</div>
+          </div></a>
+          <a href="DiscreteMathematics-2023.pdf" target="_blank"><p>Discrete Mathematics Lecture 2022 - 2023 Semester 2</p>
+          <div class="w3-light-grey w3-round-xlarge w3-small">
+            <div class="w3-container w3-center w3-round-xlarge w3-teal" style="width:93.92%">94.2%</div>
+          </div></a>
+          <a href="MultivariateCalculus-2022.pdf" target="_blank"><p>Multivariate Calculus Lecture 2022 - 2023 Semester 1</p>
+          <div class="w3-light-grey w3-round-xlarge w3-small">
+            <div class="w3-container w3-center w3-round-xlarge w3-teal" style="width:95.7%">94.6%</div>
+          </div></a>
+          <a href="GraphTheory-2022.pdf" target="_blank"><p>Graph Theory Lecture 2022 - 2023 Semester 1</p>
+          <div class="w3-light-grey w3-round-xlarge w3-small">
+            <div class="w3-container w3-center w3-round-xlarge w3-teal" style="width:95.14%">95.5%</div>
+          </div></a>
+          <a href="DiscreteMathematics-2022.pdf" target="_blank"><p>Discrete Mathematics Lecture 2021 - 2022 Semester 2</p>
+          <div class="w3-light-grey w3-round-xlarge w3-small">
+            <div class="w3-container w3-center w3-round-xlarge w3-teal" style="width:93.92%">94.76%</div>
+          </div></a>
+          <a href="MultivariateCalculus-2021.pdf" target="_blank"><p>Multivariate Calculus Lecture 2021 - 2022 Semester 1</p>
+          <div class="w3-light-grey w3-round-xlarge w3-small">
+            <div class="w3-container w3-center w3-round-xlarge w3-teal" style="width:95.7%">96.02%</div>
+          </div></a>
+          <a href="GraphTheory-2021.pdf" target="_blank"><p>Graph Theory Lecture 2021 - 2022 Semester 1</p>
+          <div class="w3-light-grey w3-round-xlarge w3-small">
+            <div class="w3-container w3-center w3-round-xlarge w3-teal" style="width:95.14%">99.4%</div>
+          </div></a>
+          <a href="DiscreteMathematics-2021.pdf" target="_blank"><p>Discrete Mathematics Lecture 2021 - 2022 Semester 2</p>
+          <div class="w3-light-grey w3-round-xlarge w3-small">
+            <div class="w3-container w3-center w3-round-xlarge w3-teal" style="width:93.92%">97.4%</div>
+          </div></a>
+          <a href="MultivariateCalculus-2020.pdf" target="_blank"><p>Multivariate Calculus Lecture 2021 - 2022 Semester 1</p>
+          <div class="w3-light-grey w3-round-xlarge w3-small">
+            <div class="w3-container w3-center w3-round-xlarge w3-teal" style="width:95.7%">96.02%</div>
+          </div></a>
+          <a href="GraphTheory-2020.pdf" target="_blank"><p>Graph Theory Lecture 2021 - 2022 Semester 1</p>
+          <div class="w3-light-grey w3-round-xlarge w3-small">
+            <div class="w3-container w3-center w3-round-xlarge w3-teal" style="width:95.14%">99.4%</div>
+          </div></a>
           <br>
 
           <p class="w3-large w3-text-theme"><b><i class="fa fa-globe fa-fw w3-margin-right w3-text-teal"></i>Languages</b></p>
