--- a/city/index.html
+++ b/city/index.html
@@ -56,18 +56,22 @@ html,body,h1,h2,h3,h4,h5,h6 {font-family: "Roboto", sans-serif}
           <a href="DiscreteMathematics-2023.pdf" target="_blank"><p>Discrete Mathematics Lecture 2022 - 2023 Semester 2</p>
           <div class="w3-light-grey w3-round-xlarge w3-small">
             <div class="w3-container w3-center w3-round-xlarge w3-teal" style="width:94.2%">94.2%</div>
+            <div class="w3-container w3-center w3-round-xlarge w3-teal" style="width:94.6%">School mean: 89.55%</div>
           </div></a>
           <a href="MultivariateCalculus-2022.pdf" target="_blank"><p>Multivariate Calculus Lecture 2022 - 2023 Semester 1</p>
           <div class="w3-light-grey w3-round-xlarge w3-small">
-            <div class="w3-container w3-center w3-round-xlarge w3-teal" style="width:94.6%">94.6%</div>
+            <div class="w3-container w3-center w3-round-xlarge w3-teal" style="width:94.6%">My score: 94.6%</div>
+            <div class="w3-container w3-center w3-round-xlarge w3-teal" style="width:94.6%">School mean: 89.55%</div>
           </div></a>
           <a href="GraphTheory-2022.pdf" target="_blank"><p>Graph Theory Lecture 2022 - 2023 Semester 1</p>
           <div class="w3-light-grey w3-round-xlarge w3-small">
             <div class="w3-container w3-center w3-round-xlarge w3-teal" style="width:95.5%">95.5%</div>
+            <div class="w3-container w3-center w3-round-xlarge w3-teal" style="width:94.6%">School mean: 89.55%</div>
           </div></a>
           <a href="DiscreteMathematics-2022.pdf" target="_blank"><p>Discrete Mathematics Lecture 2021 - 2022 Semester 2</p>
           <div class="w3-light-grey w3-round-xlarge w3-small">
             <div class="w3-container w3-center w3-round-xlarge w3-teal" style="width:94.76%">94.76%</div>
+            <div class="w3-container w3-center w3-round-xlarge w3-maroon" style="width:94.6%">School mean: 89.44%</div>
           </div></a>
           <a href="MultivariateCalculus-2021.pdf" target="_blank"><p>Multivariate Calculus Lecture 2021 - 2022 Semester 1</p>
           <div class="w3-light-grey w3-round-xlarge w3-small">
