--- a/city/index.html
+++ b/city/index.html
@@ -71,7 +71,7 @@ html,body,h1,h2,h3,h4,h5,h6 {font-family: "Roboto", sans-serif}
           <a href="DiscreteMathematics-2022.pdf" target="_blank"><p>Discrete Mathematics Lecture 2021 - 2022 Semester 2</p>
           <div class="w3-light-grey w3-round-xlarge w3-small">
             <div class="w3-container w3-center w3-round-xlarge w3-teal" style="width:94.76%">94.76%</div>
-            <div class="w3-container w3-center w3-round-xlarge w3-maroon" style="width:94.6%">School mean: 89.44%</div>
+            <div class="w3-container w3-center w3-round-xlarge w3-pale-red" style="width:94.6%">School mean: 89.44%</div>
           </div></a>
           <a href="MultivariateCalculus-2021.pdf" target="_blank"><p>Multivariate Calculus Lecture 2021 - 2022 Semester 1</p>
           <div class="w3-light-grey w3-round-xlarge w3-small">
